# ecomimic-ml

./: Dockerfile  pyproject.toml  startup.sh
.github/workflows/: bump-tag-ci.yml  docker-image-ci.yml
app/: main.py
app/cores/: database.py
app/models/: economic_indicator.py  fred_index.py  olhcv.py
app/routers/: economic_indicators.py  olhcvs.py
app/services/: economic_indicator_service.py  olhcv_service.py
