[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "cuid>=0.4",
    "fastapi[standard]>=0.115.4",
    "fredapi>=0.5.2",
    "mysql-connector-python>=9.2.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "retry>=0.9.2",
    "sqlmodel>=0.0.22",
    "yfinance>=0.2.58",
]
